# torchregression

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  torchregression.py
