[project]
authors = [{name = "Vincent QB", email = "vincentqb@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
description = "Regression with pytorch."
name = "torchregression"
readme = "README.md"
requires-python = ">=3.12"
version = "1.5.1"

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.ty.rules]
invalid-assignment = "warn"
missing-argument = "ignore"
unresolved-attribute = "warn"
unresolved-import = "warn"

[tool.uv]
package = true
